@startuml ClassDiagram_FitnessCenter
' ============================================================
' CLASS DIAGRAM — Sistem Informatic Distribuit
' pentru Gestionarea unei Săli de Fitness
' Model de Domeniu (Domain Model)
' ============================================================
title **Diagrama de Clase — Fitness Center Management System**

skinparam class {
  BackgroundColor #F8F9FA
  BorderColor #2D3436
  ArrowColor #636E72
  AttributeIconSize 0
}
skinparam note {
  BackgroundColor #FFEAA7
  BorderColor #2D3436
}
skinparam stereotypeCPosition bottom

' ══════════════════════════════════
' ENUMERĂRI
' ══════════════════════════════════

enum UserRole <<enumeration>> {
  ADMIN
  MEMBER
}

enum SubscriptionStatus <<enumeration>> {
  ACTIVE
  PENDING_PAYMENT
  PAYMENT_FAILED
  EXPIRED
  CANCELLED
}

enum SubscriptionType <<enumeration>> {
  STANDARD
  PERSONALIZED
}

enum ReservationStatus <<enumeration>> {
  CONFIRMED
  CANCELLED
  CANCELLED_EXPIRED
}

enum PaymentStatus <<enumeration>> {
  PENDING
  COMPLETED
  FAILED
  REFUNDED
}

enum EquipmentCondition <<enumeration>> {
  NEW
  GOOD
  FAIR
  NEEDS_REPAIR
  DECOMMISSIONED
}

' ══════════════════════════════════
' CLASE PRINCIPALE
' ══════════════════════════════════

class User {
  - id : int <<PK>>
  - email : str <<unique>>
  - hashed_password : str
  - role : UserRole
  - is_active : bool = true
  - is_locked : bool = false
  - login_attempts : int = 0
  - created_at : datetime
  - updated_at : datetime
  __
  + authenticate(password: str) : bool
  + generateJWT() : str
  + incrementLoginAttempts() : void
  + resetLoginAttempts() : void
  + lockAccount() : void
  + unlockAccount() : void
  + isLocked() : bool
  + hasRole(role: UserRole) : bool
}

class Member {
  - id : int <<PK>>
  - user_id : int <<FK, unique>>
  - first_name : str
  - last_name : str
  - phone : str
  - subscription_status : str = "none"
  - created_at : datetime
  - updated_at : datetime
  __
  + getFullName() : str
  + hasActiveSubscription() : bool
  + isRestricted() : bool
  + getActiveSubscription() : Subscription
  + getReservations(status: ReservationStatus) : list[Reservation]
  + getPaymentHistory() : list[Payment]
  + canMakeReservation() : bool
}

class Trainer {
  - id : int <<PK>>
  - first_name : str
  - last_name : str
  - phone : str
  - specialization : str
  - is_active : bool = true
  - created_at : datetime
  __
  + getFullName() : str
  + getSchedule(date: date) : list[FitnessClass]
  + getAssignedClasses() : list[FitnessClass]
}

note bottom of Trainer
  **Nu are credențiale de login.**
  Antrenorii sunt entități gestionate
  de Administratori (SRS v1.2, §2.3).
end note

class Subscription {
  - id : int <<PK>>
  - member_id : int <<FK>>
  - type : SubscriptionType
  - base_fee : Decimal(10,2)
  - pt_sessions : int = 0
  - total_amount : Decimal(10,2)
  - start_date : date
  - end_date : date
  - status : SubscriptionStatus
  - created_at : datetime
  __
  + calculateTotal() : Decimal
  + isActive() : bool
  + isExpired() : bool
  + daysRemaining() : int
  + expire() : void
  + activate() : void
  + getRemainingPTSessions() : int
}

note right of Subscription
  **Formula (REQ-8):**
  total_amount = base_fee
    + (pt_sessions × 50 RON)
  ──────────────────────
  Un membru poate avea un
  singur abonament activ,
  dar mai multe istorice.
end note

class Payment {
  - id : int <<PK>>
  - subscription_id : int <<FK>>
  - amount : Decimal(10,2)
  - currency : str = "RON"
  - gateway_session_id : str
  - gateway_reference : str
  - status : PaymentStatus
  - paid_at : datetime
  - created_at : datetime
  __
  + isCompleted() : bool
  + isPending() : bool
  + markAsCompleted(reference: str) : void
  + markAsFailed() : void
}

class FitnessClass {
  - id : int <<PK>>
  - trainer_id : int <<FK>>
  - facility_id : int <<FK>>
  - name : str
  - description : str
  - start_time : datetime
  - end_time : datetime
  - capacity : int
  - created_at : datetime
  __
  + getDuration() : timedelta
  + getAvailableSpots() : int
  + isFull() : bool
  + isUpcoming() : bool
  + getConfirmedReservations() : list[Reservation]
  + getOccupancyRate() : float
}

class Reservation {
  - id : int <<PK>>
  - member_id : int <<FK>>
  - class_id : int <<FK>>
  - reserved_at : datetime
  - status : ReservationStatus
  __
  + isConfirmed() : bool
  + cancel() : void
  + cancelDueToExpiry() : void
}

class Facility {
  - id : int <<PK>>
  - name : str
  - capacity : int
  - description : str
  - is_active : bool = true
  - created_at : datetime
  __
  + getSchedule(date: date) : list[FitnessClass]
  + getOccupancyRate(month: date) : float
  + getEquipmentList() : list[Equipment]
}

class Equipment {
  - id : int <<PK>>
  - facility_id : int <<FK>>
  - name : str
  - category : str
  - quantity : int
  - condition : EquipmentCondition
  - notes : str
  - created_at : datetime
  - updated_at : datetime
  __
  + needsRepair() : bool
  + updateCondition(condition: EquipmentCondition) : void
}

class RestrictedClient {
  - id : int <<PK>>
  - member_id : int <<FK, unique>>
  - subscription_id : int <<FK>>
  - restricted_at : datetime
  - reason : str
  __
  + lift() : void
  + getDaysSinceRestriction() : int
}

note bottom of RestrictedClient
  **REQ-6:** Când un abonament expiră,
  membrul este mutat automat aici.
  Un client restricționat NU poate
  face rezervări noi.
end note

' ══════════════════════════════════
' CLASE SERVICE LAYER
' ══════════════════════════════════

abstract class BaseService <<abstract>> {
  # db_session : Session
  __
  + {abstract} validate(entity: T) : bool
}

class AuthService {
  - secret_key : str
  - token_expiry : int = 1800
  __
  + authenticate(email: str, password: str) : AuthResponse
  + generateToken(user: User) : str
  + validateToken(token: str) : DecodedToken
  + hashPassword(password: str) : str
  + verifyPassword(plain: str, hashed: str) : bool
}

class MemberService {
  __
  + createMember(data: MemberCreate) : Member
  + updateMember(id: int, data: MemberUpdate) : Member
  + getMemberById(id: int) : Member
  + getAllMembers() : list[Member]
  + restrictMember(memberId: int, reason: str) : void
  + unrestrictMember(memberId: int) : void
}

class SubscriptionService {
  __
  + createSubscription(data: SubscriptionCreate) : Subscription
  + calculatePrice(type: SubscriptionType, ptSessions: int) : Decimal
  + getActiveSubscription(memberId: int) : Subscription
  + activateSubscription(subscriptionId: int) : void
  + expireSubscription(subscriptionId: int) : void
  + getExpiredSubscriptions() : list[Subscription]
}

class PaymentService {
  - gateway_client : PaymentGateway
  __
  + initiatePayment(subscriptionId: int) : PaymentInitResponse
  + handleWebhookSuccess(data: WebhookData) : void
  + handleWebhookFailure(data: WebhookData) : void
  + getPaymentHistory(memberId: int) : list[Payment]
}

class ReservationService {
  __
  + createReservation(memberId: int, classId: int) : Reservation
  + cancelReservation(reservationId: int) : void
  + cancelExpiredReservations(memberId: int) : void
  + getMemberReservations(memberId: int) : list[Reservation]
  + getClassReservations(classId: int) : list[Reservation]
}

class ReportService {
  __
  + generateRevenueReport(month: date) : RevenueReportDTO
  + generateOccupancyReport(month: date) : OccupancyReportDTO
}

class ExpirationCronService {
  __
  + runDailyExpirationCheck() : ExpirationReport
  - processExpiredMember(member: Member, subscription: Subscription) : void
}

' ══════════════════════════════════
' INTERFEȚE (Repository Pattern)
' ══════════════════════════════════

interface IUserRepository <<interface>> {
  + findByEmail(email: str) : User
  + findById(id: int) : User
  + save(user: User) : User
  + incrementLoginAttempts(userId: int) : void
  + lockAccount(userId: int) : void
}

interface IMemberRepository <<interface>> {
  + findById(id: int) : Member
  + findByUserId(userId: int) : Member
  + findAll() : list[Member]
  + save(member: Member) : Member
  + updateSubscriptionStatus(id: int, status: str) : void
}

interface ISubscriptionRepository <<interface>> {
  + findActiveByMemberId(memberId: int) : Subscription
  + findExpired() : list[Subscription]
  + save(subscription: Subscription) : Subscription
  + updateStatus(id: int, status: SubscriptionStatus) : void
}

interface IReservationRepository <<interface>> {
  + findByMemberAndClass(memberId: int, classId: int) : Reservation
  + findByMemberId(memberId: int) : list[Reservation]
  + countConfirmedByClassId(classId: int) : int
  + save(reservation: Reservation) : Reservation
  + cancelFutureByMemberId(memberId: int) : int
}

interface IPaymentRepository <<interface>> {
  + findBySubscriptionId(subscriptionId: int) : list[Payment]
  + findByGatewaySession(sessionId: str) : Payment
  + save(payment: Payment) : Payment
  + updateStatus(id: int, status: PaymentStatus) : void
}

' ══════════════════════════════════
' RELAȚII — DOMAIN MODEL
' ══════════════════════════════════

' Compoziție: User deține Member profile (1:1)
User "1" *-- "0..1" Member : has profile >

' Asociere: Member are Subscriptions (1:N)
Member "1" -- "0..*" Subscription : subscribes to >

' Asociere: Member face Reservations (1:N)
Member "1" -- "0..*" Reservation : makes >

' Compoziție: Subscription conține Payments (1:N)
Subscription "1" *-- "0..*" Payment : pays for >

' Asociere: FitnessClass are Reservations (1:N)
FitnessClass "1" -- "0..*" Reservation : booked via >

' Agregare: Trainer conduce FitnessClasses (1:N)
Trainer "1" o-- "0..*" FitnessClass : teaches >

' Agregare: Facility găzduiește FitnessClasses (1:N)
Facility "1" o-- "0..*" FitnessClass : hosts >

' Compoziție: Facility deține Equipment (1:N)
Facility "1" *-- "0..*" Equipment : contains >

' Asociere: Member -> RestrictedClient (1:0..1)
Member "1" -- "0..1" RestrictedClient : restricted as >

' Asociere: Subscription -> RestrictedClient
Subscription "1" -- "0..1" RestrictedClient : triggered by >

' ── Enumerări ──
User ..> UserRole : uses >
Subscription ..> SubscriptionStatus : uses >
Subscription ..> SubscriptionType : uses >
Reservation ..> ReservationStatus : uses >
Payment ..> PaymentStatus : uses >
Equipment ..> EquipmentCondition : uses >

' ══════════════════════════════════
' RELAȚII — SERVICE LAYER
' ══════════════════════════════════

AuthService --|> BaseService
MemberService --|> BaseService
SubscriptionService --|> BaseService
PaymentService --|> BaseService
ReservationService --|> BaseService
ReportService --|> BaseService
ExpirationCronService --|> BaseService

AuthService ..> IUserRepository : depends on >
MemberService ..> IMemberRepository : depends on >
SubscriptionService ..> ISubscriptionRepository : depends on >
PaymentService ..> IPaymentRepository : depends on >
ReservationService ..> IReservationRepository : depends on >
ReservationService ..> SubscriptionService : depends on >

ExpirationCronService ..> SubscriptionService : uses >
ExpirationCronService ..> MemberService : uses >
ExpirationCronService ..> ReservationService : uses >

@enduml
